--- a/index.html
+++ b/index.html
@@ -2,46 +2,37 @@
 <html>
 
 <head>
-    <title>PremierProjet</title>
-    <link rel="stylesheet" type="text/css" href="css.css">
+    <meta charset="utf-8">
+    <title>Ohmyfood</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="assets/images/logo/ohmyfood@2x.svg" rel="shortcut icon" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="assets/css.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/96c58dc3c8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
     <header>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <div>
-            <img class="ohmyfood" src="ImagesOhmyfood/images/logo/ohmyfood.png">
-        </div>
+        <h1>ohmyfood</h1>
     </header>
-    <nav>
-        <div class="barrederecherche">
-            <div class="recherche">
-                <i class="location fa-solid fa-location-dot"></i>
-                <form class="Paris-belleville">Paris, Beneville</form>
-            </div>
-        </div>
-        <section class="cadrenav">
-            <div>
-                <h2 class="Menuquivousconvient">Réservez le menu qui vous convient</h2>
-            </div>
-            <div>
-                <p class="Découvrez_des_restaurants">Découvrez des restaurents d'exception, sélectionnés par nos soins.
-                </p>
-            </div>
-            <div class="Firstbouton">
-                <a class="textinfirstbouton">Explorer nos restaurants</a>
-            </div>
-        </section>
-    </nav>
     <main>
+
+        <div class="localisation ">
+            <i class="fa-sharp fa-solid fa-location-dot"></i>
+            <p>Paris, Belleville</p>
+        </div>
+
+        <h2 class="reservez">Réservez le menu qui vous convient</h2>
+        <p class="decouvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+        <button class="bouton1"> Explorer nos restaurants </button>
+
         <section class="cadrefonction">
             <div>
                 <h2 class="Fonctionnement">Fonctionnement</h2>
@@ -85,12 +76,14 @@
                     <article class="new">
                         <h2 class="minitext">Nouveau</h2>
                     </article>
-                    <img class="image" src="ImagesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                    <img class="image" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
                     <div class="avis">
                         <i class="button fa-regular fa-heart"></i>
                     </div>
                     <article class="descripton">
-                        <a href="index1.html"><h3 class="titre">La palette du goût</h3></a>
+                        <a href="restaurants/lapalettedugout.html">
+                            <h3 class="titre">La palette du goût</h3>
+                        </a>
                         <p class="soustitre">Ménilmotant</p>
                     </article>
                 </section>
@@ -98,33 +91,39 @@
                     <article class="new">
                         <h2 class="minitext">Nouveau</h2>
                     </article>
-                    <img class="image" src="ImagesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                    <img class="image" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
                     <div class="avis">
                         <i class="button fa-regular fa-heart"></i>
                     </div>
                     <article class="descripton">
-                        <a href="index2.html"><h3 class="titre">La note enchantée</h3></a>
+                        <a href="restaurants/lanoteenchantee.html">
+                            <h3 class="titre">La note enchantée</h3>
+                        </a>
                         <p class="soustitre">Charonne</p>
                     </article>
                 </section>
                 <section class="cadreresto">
-                    <img class="image" src="ImagesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                    <img class="image" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
                     <div class="avis">
                         <i class="button fa-regular fa-heart"></i>
                     </div>
                     <article class="descripton">
-                        <a href="index3.html"><h3 class="titre">À la française</h3></a>
+                        <a href="restaurants/alafrançaise.html">
+                            <h3 class="titre">À la française</h3>
+                        </a>
                         <p class="soustitre">Cité Rouge</p>
                     </article>
                 </section>
                 <section class="cadreresto">
                     <img class="image"
-                        src="ImagesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                        src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                     <div class="avis">
                         <i class="button fa-regular fa-heart"></i>
                     </div>
                     <article class="descripton">
-                        <a href="index4.html"><h3 class="titre">Le délice des sens</h3></a>
+                        <a href="restaurants/ledelicedessens.html">
+                            <h3 class="titre">Le délice des sens</h3>
+                        </a>
                         <p class="soustitre">Folie-Méricourt</p>
                     </article>
                 </section>
