--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>La palette du goût</title>
-   <link rel="stylesheet" type="text/css" href="styles.css">
+   <link rel="stylesheet" type="text/css" href="../assets/styles.css">
 </head>
     <body>
         <header>
