--- a/restaurants/ledelicedessens.html
+++ b/restaurants/ledelicedessens.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>La palette du goût</title>
-   <link rel="stylesheet" type="text/css" href="styles.css">
+   <link rel="stylesheet" type="text/css" href="../assets/styles.css">
 </head>
     <body>
         <header>
@@ -14,41 +14,41 @@
         <nav>
             <section>
                 <div>
-                    <img class="imagedefond" src="ImagesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash">
+                    <img class="imagedefond" src="ImagesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash">
                 </div>
             </section>
             <div class="supercadre"></div>
         </nav>
         <main>
             <section class="cadre">
-                <h1 class="lapalettedegout">À la française</h1>
+                <h1 class="lapalettedegout">Le délice des sens</h1>
                     <i class="icone fa-sharp fa-solid fa-heart"></i>
                 <div>
                     <h2 class="titre">ENTRÉE</h2>
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Tartare de poulpe acidulé</h3>
-                                <p class="soustitre">Aux zestes d'orange</p>
+                                <h3 class="titremenu">Tartare de thon</h3>
+                                <p class="soustitre">Assaisonné au yuzu</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
                             <p class="prix">25€</p>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Velouté de légumes d'antan</h3>
-                                <p class="soustitre">Carotte, panais, topinambour</p>
+                                <h3 class="titremenu">Bouchée de homard croustillant</h3>
+                                <p class="soustitre">Et sa farandole de petits légumes</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
                             <p class="prix">35€</p>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Soupe à l'oignon</h3>
-                                <p class="soustitre">Revisitée</p>
+                                <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
+                                <p class="soustitre">Et sa crème de truffe</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">20€</p>
+                            <p class="prix">40€</p>
                         </div>
                     </div>
                 </div>
@@ -56,24 +56,24 @@
                 <div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Coquilles Saint-Jacques</h3>
-                            <p class="soustitre">Accompagnées d'une purée de panais</p>
+                            <h3 class="titremenu">Poulet rôti aux herbes de Provence</h3>
+                            <p class="soustitre">Et sa crème de truffe</p>
                             <i class="ok1 fa-solid fa-circle-check"></i>
                         </article>
                         <p class="prix">40€</p>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Magret de canard</h3>
-                            <p class="soustitre">Et parmentier de pommes de terre</p>
+                            <h3 class="titremenu">Langouste rôtie</h3>
+                            <p class="soustitre">Et ses légumes de saison</p>
                             <i class="ok1 fa-solid fa-circle-check"></i>
                         </article>
                         <p class="prix">35€</p>
                     </div>
                     <div class="minicadre">
                         <article class="description">
-                            <h3 class="titremenu">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p class="soustitre">Sur son lit de gnocchis aux légumes</p>
+                            <h3 class="titremenu">Côte de bœuf Angus</h3>
+                            <p class="soustitre">Et sa purée de panais</p>
                             <i class="ok1 fa-solid fa-circle-check"></i>
                         </article>
                         <p class="prix">44€</p>
@@ -84,24 +84,24 @@
                     <div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Pétales de violettes glacés</h3>
-                                <p class="soustitre">Et purée de noisettes</p>
+                                <h3 class="titremenu">Œuf au plat</h3>
+                                <p class="soustitre">Assaisonné à la truffe sur lit de caviar</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">18€</p>
+                            <p class="prix">76€</p>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Fondant au chocolat</h3>
-                                <p class="soustitre">Revisité</p>
+                                <h3 class="titremenu">Crème brulée</h3>
+                                <p class="soustitre">Revisitée</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
                             <p class="prix">22€</p>
                         </div>
                         <div class="minicadre">
                             <article class="description">
-                                <h3 class="titremenu">Millefeuille croustillant</h3>
-                                <p class="soustitre">Myrtilles et pâte d’amande</p>
+                                <h3 class="titremenu">Tiramisu</h3>
+                                <p class="soustitre">À la noisette</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
                             <p class="prix">23€</p>
