--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -8,13 +8,13 @@
         <header>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <div>
-                <img class="ohmyfood" src="ImagesOhmyfood/images/logo/ohmyfood.png">
+                <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
             </div>
         </header>
         <nav>
             <section>
                 <div>
-                    <img class="imagedefond" src="ImagesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil-u2Lp8tXIcjw-unsplash">
+                    <img class="imagedefond" src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil-u2Lp8tXIcjw-unsplash">
                 </div>
             </section>
             <div class="supercadre"></div>
