--- a/restaurants/lapalettedugout.html
+++ b/restaurants/lapalettedugout.html
@@ -8,13 +8,13 @@
         <header>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <div>
-                <img class="ohmyfood" src="ImagesOhmyfood/images/logo/ohmyfood.png">
+                <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
             </div>
         </header>
         <nav>
             <section>
                 <div>
-                    <img class="imagedefond" src="ImagesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash">
+                    <img class="imagedefond" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington-N_Y88TWmGwA-unsplash">
                 </div>
             </section>
             <div class="supercadre"></div>
@@ -30,9 +30,15 @@
                             <article class="description">
                                 <h3 class="titremenu">Fricassée d'escargots</h3>
                                 <p class="soustitre">Au piment d'Espelette</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">25€</p>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    <i class="ok1 fa-solid fa-circle-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
@@ -40,7 +46,14 @@
                                 <p class="soustitre">Et ses copeaux de truffe noire</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">35€</p>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
@@ -48,7 +61,14 @@
                                 <p class="soustitre">Assaisonné à la truffe sur lit de caviar</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">20€</p>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -60,7 +80,14 @@
                             <p class="soustitre">Accompagné de sa ribambelle de légumes</p>
                             <i class="ok1 fa-solid fa-circle-check"></i>
                         </article>
-                        <p class="prix">40€</p>
+                        <Portée>25€</durée>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                < i class="fa-solid fa-check"></i>
+                            </empan>
+                        </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
@@ -68,7 +95,14 @@
                             <p class="soustitre">À la truffe noire sa purée de panais</p>
                             <i class="ok1 fa-solid fa-circle-check"></i>
                         </article>
-                        <p class="prix">35€</p>
+                        <Portée>25€</durée>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                < i class="fa-solid fa-check"></i>
+                            </empan>
+                        </div>
                     </div>
                     <div class="minicadre">
                         <article class="description">
@@ -76,7 +110,14 @@
                             <p class="soustitre">Aux légumes</p>
                             <i class="ok1 fa-solid fa-circle-check"></i>
                         </article>
-                        <p class="prix">44€</p>
+                        <Portée>25€</durée>
+                        <div class="carte__plats__infos__checkbox">
+                            <input type="checkbox » name="plat-entrées"
+                                value="Tartare de poulpe acidulé" />
+                            <span class="checkbox_icon">
+                                < i class="fa-solid fa-check"></i>
+                            </empan>
+                        </div>
                     </div>
                 </div>
                 <h2 class="titre">DESSERTS</h2>
@@ -88,7 +129,14 @@
                                 <p class="soustitre">Revisité</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">18€</p>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
@@ -96,15 +144,28 @@
                                 <p class="soustitre">Et glace à la vanille de Madagascar</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">22€</p>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
                                 <h3 class="titremenu">Mousse au chocolat</h3>
                                 <p class="soustitre">Au piment d'Espelette</p>
-                                <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">23€</p>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
