--- a/index.html
+++ b/index.html
@@ -72,61 +72,67 @@
                 <h2 class="Restaurants">Restaurants</h2>
             </div>
             <section class="ordre1">
-                <section class="cadreresto">
-                    <article class="new">
+                <a class="cadreresto" href="restaurants/lapalettedugout.html">
+                    <button class="new">
                         <h2 class="minitext">Nouveau</h2>
-                    </article>
+                    </button>
                     <img class="image" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-                    <div class="avis">
-                        <i class="button fa-regular fa-heart"></i>
-                    </div>
                     <article class="descripton">
-                        <a href="restaurants/lapalettedugout.html">
-                            <h3 class="titre">La palette du goût</h3>
-                        </a>
+                        <h3 class="titre">La palette du goût</h3>
                         <p class="soustitre">Ménilmotant</p>
                     </article>
-                </section>
-                <section class="cadreresto">
-                    <article class="new">
+                </a>
+                <div class="article__infos__jaime">
+                    <input type="checkbox" name="jaime" value="J'aime" />
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+
+                <a class="cadreresto" href="restaurants/lanoteenchantee.html">
+                    <button class="new">
                         <h2 class="minitext">Nouveau</h2>
-                    </article>
+                    </button>
                     <img class="image" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
-                    <div class="avis">
-                        <i class="button fa-regular fa-heart"></i>
-                    </div>
                     <article class="descripton">
-                        <a href="restaurants/lanoteenchantee.html">
-                            <h3 class="titre">La note enchantée</h3>
-                        </a>
+                        <h3 class="titre">La note enchantée</h3>
                         <p class="soustitre">Charonne</p>
                     </article>
-                </section>
-                <section class="cadreresto">
+                </a>
+                <div class="article__infos__jaime">
+                    <input type="checkbox" name="jaime" value="J'aime" />
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+
+
+                <a class="cadreresto" href="restaurants/alafrançaise.html">
                     <img class="image" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-                    <div class="avis">
-                        <i class="button fa-regular fa-heart"></i>
-                    </div>
                     <article class="descripton">
-                        <a href="restaurants/alafrançaise.html">
-                            <h3 class="titre">À la française</h3>
-                        </a>
+                        <h3 class="titre">À la française</h3>
                         <p class="soustitre">Cité Rouge</p>
                     </article>
-                </section>
-                <section class="cadreresto">
-                    <img class="image"
-                        src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
-                    <div class="avis">
-                        <i class="button fa-regular fa-heart"></i>
-                    </div>
+                </a>
+                <div class="article__infos__jaime">
+                    <input type="checkbox" name="jaime" value="J'aime" />
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+
+
+                <a class="cadreresto" href="restaurants/ledelicedessens.html">
+                    <img class="image" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                     <article class="descripton">
-                        <a href="restaurants/ledelicedessens.html">
-                            <h3 class="titre">Le délice des sens</h3>
-                        </a>
+                        <h3 class="titre">Le délice des sens</h3>
                         <p class="soustitre">Folie-Méricourt</p>
                     </article>
-                </section>
+                </a>
+                <div class="article__infos__jaime">
+                    <input type="checkbox" name="jaime" value="J'aime" />
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+
+
             </section>
         </section>
     </main>
