--- a/restaurants/alafrançaise.html
+++ b/restaurants/alafrançaise.html
@@ -8,13 +8,13 @@
         <header>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <div>
-                <img class="ohmyfood" src="ImagesOhmyfood/images/logo/ohmyfood.png">
+                <img class="ohmyfood" src="../assets/images/logo/ohmyfood.png" alt="ohmyfood">
             </div>
         </header>
         <nav>
             <section>
                 <div>
-                    <img class="imagedefond" src="ImagesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash">
+                    <img class="imagedefond" src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba-DQKerTsQwi0-unsplash">
                 </div>
             </section>
             <div class="supercadre"></div>
@@ -32,51 +32,96 @@
                                 <p class="soustitre">Aux zestes d'orange</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">25€</p>
-                        </div>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
+                        </Port>
                         <div class="minicadre">
                             <article class="description">
                                 <h3 class="titremenu">Velouté de légumes d'antan</h3>
                                 <p class="soustitre">Carotte, panais, topinambour</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">35€</p>
-                        </div>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
+                        </Port>
                         <div class="minicadre">
                             <article class="description">
                                 <h3 class="titremenu">Soupe à l'oignon</h3>
                                 <p class="soustitre">Revisitée</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">20€</p>
-                        </div>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
+                        </Port>
                     </div>
                 </div>
-                <h2 class="titre">PLATS</h2>
                 <div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Coquilles Saint-Jacques</h3>
-                            <p class="soustitre">Accompagnées d'une purée de panais</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
-                        </article>
-                        <p class="prix">40€</p>
-                    </div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Magret de canard</h3>
-                            <p class="soustitre">Et parmentier de pommes de terre</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
-                        </article>
-                        <p class="prix">35€</p>
-                    </div>
-                    <div class="minicadre">
-                        <article class="description">
-                            <h3 class="titremenu">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p class="soustitre">Sur son lit de gnocchis aux légumes</p>
-                            <i class="ok1 fa-solid fa-circle-check"></i>
-                        </article>
-                        <p class="prix">44€</p>
+                    <h2 class="titre">PLATS</h2>
+                    <div>
+                        <div class="minicadre">
+                            <article class="description">
+                                <h3 class="titremenu">Coquilles Saint-Jacques</h3>
+                                <p class="soustitre">Accompagnées d'une purée de panais</p>
+                                <i class="ok1 fa-solid fa-circle-check"></i>
+                            </article>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
+                        </Port>
+                        </div>
+                        <div class="minicadre">
+                            <article class="description">
+                                <h3 class="titremenu">Magret de canard</h3>
+                                <p class="soustitre">Et parmentier de pommes de terre</p>
+                                <i class="ok1 fa-solid fa-circle-check"></i>
+                            </article>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
+                        </div>
+                        <div class="minicadre">
+                            <article class="description">
+                                <h3 class="titremenu">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p class="soustitre">Sur son lit de gnocchis aux légumes</p>
+                                <i class="ok1 fa-solid fa-circle-check"></i>
+                            </article>
+                            <Portée>25€</durée>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <h2 class="titre">DESSERTS</h2>
@@ -88,7 +133,13 @@
                                 <p class="soustitre">Et purée de noisettes</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">18€</p>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
@@ -96,7 +147,13 @@
                                 <p class="soustitre">Revisité</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">22€</p>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                         <div class="minicadre">
                             <article class="description">
@@ -104,7 +161,13 @@
                                 <p class="soustitre">Myrtilles et pâte d’amande</p>
                                 <i class="ok1 fa-solid fa-circle-check"></i>
                             </article>
-                            <p class="prix">23€</p>
+                            <div class="carte__plats__infos__checkbox">
+                                <input type="checkbox » name="plat-entrées"
+                                    value="Tartare de poulpe acidulé" />
+                                <span class="checkbox_icon">
+                                    < i class="fa-solid fa-check"></i>
+                                </empan>
+                            </div>
                         </div>
                     </div>
                 </div>
